--- a/src/config/auido2pose.yaml
+++ b/src/config/auido2pose.yaml
@@ -7,7 +7,7 @@ DATASET:
   EXP_DIM: 64
   FRAME_LEN: 32
   COEFF_LEN: 73
-  NUM_CLASSES: 637 #46  change to your label numbers
+  NUM_CLASSES: 46  #change to your label numbers
   AUDIO_ROOT_PATH: /apdcephfs_cq2/share_1290939/wenxuazhang/voxceleb1/wav
   COEFF_ROOT_PATH: /apdcephfs_cq2/share_1290939/shadowcun/datasets/VoxCeleb/v1/imdb
   DEBUG: True
